src/test/deca/syntax/valid/ifthenelse.deca
{
int x = 9;
if(x >5) {
x= 6;
}
else if(x<4) {
x=1;
}
else if (x!=9){
x = 4;
}
else{
x=1;
}
}