src/test/deca/syntax/invalid/IfNotOrdered.deca

{
    int a = 0, b;
    b = 4;
    if (a == b) {
        print("Pas bon ca");
    }
    else {
        print("...");
    }
    else if (true) {
        printlnx("Erreur");
    }
}